--- a/Model/DataManipulation.ipynb
+++ b/Model/DataManipulation.ipynb
@@ -394,6 +394,379 @@
     "\n",
     "audit_data_organizer(dataHandler, '../Datasets/water_quality_training_dataset.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "216abd74",
+   "metadata": {},
+   "source": [
+    "## fazendo caracteristicas do solo serem em \"packs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "8d9d325b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Latitude', 'Longitude', 'Sample Date', 'pct_agri', 'pct_urban',\n",
+       "       'pct_natural', 'pct_water', 'pct_wetlands', 'pct_others'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solo = pd.read_csv('../Datasets/soil_use_data_rounded_training.csv')\n",
+    "solo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5587aa82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Latitude        -34.405833\n",
+       "Longitude        17.730278\n",
+       "Sample Date     01-01-2013\n",
+       "pct_agri               0.0\n",
+       "pct_urban              0.0\n",
+       "pct_natural            3.0\n",
+       "pct_water              0.0\n",
+       "pct_wetlands           0.0\n",
+       "pct_others             0.0\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solo.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "75168fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Latitude        -22.225556\n",
+       "Longitude           32.325\n",
+       "Sample Date     31-12-2015\n",
+       "pct_agri              86.0\n",
+       "pct_urban             60.0\n",
+       "pct_natural          100.0\n",
+       "pct_water             14.0\n",
+       "pct_wetlands          16.0\n",
+       "pct_others            92.0\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solo.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4ec07187",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pct_agri\n",
+      "pct_urban\n",
+      "pct_natural\n",
+      "pct_water\n",
+      "pct_wetlands\n",
+      "pct_others\n"
+     ]
+    }
+   ],
+   "source": [
+    "for coluna in solo.columns:\n",
+    "    if coluna not in ['Latitude', 'Longitude', 'Sample Date']:\n",
+    "        print(coluna)\n",
+    "        solo[coluna] = (solo[coluna] // 10) * 10\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "02c18b28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latitude        -34.405833\n",
+      "Longitude        17.730278\n",
+      "Sample Date     01-01-2013\n",
+      "pct_agri               0.0\n",
+      "pct_urban              0.0\n",
+      "pct_natural            0.0\n",
+      "pct_water              0.0\n",
+      "pct_wetlands           0.0\n",
+      "pct_others             0.0\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Latitude        -22.225556\n",
+       "Longitude           32.325\n",
+       "Sample Date     31-12-2015\n",
+       "pct_agri              80.0\n",
+       "pct_urban             60.0\n",
+       "pct_natural          100.0\n",
+       "pct_water             10.0\n",
+       "pct_wetlands          10.0\n",
+       "pct_others            90.0\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(solo.min())\n",
+    "solo.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ca95e08b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pct_agri\n",
+      "9\n",
+      "pct_urban\n",
+      "7\n",
+      "pct_natural\n",
+      "11\n",
+      "pct_water\n",
+      "2\n",
+      "pct_wetlands\n",
+      "2\n",
+      "pct_others\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for coluna in solo.columns:\n",
+    "    if coluna not in ['Latitude', 'Longitude', 'Sample Date']:\n",
+    "        print(coluna)\n",
+    "        print(len(solo[coluna].unique()))\n",
+    "\n",
+    "solo.to_csv('../Datasets/soil_use_data_rounded_in_packs_training.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e337e978",
+   "metadata": {},
+   "source": [
+    "## Terrain Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "da27eb3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Latitude', 'Longitude', 'Sample Date', 'elevation', 'slope',\n",
+       "       'curvature'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "terrain = pd.read_csv('../Datasets/nasa_terrain_features_rounded_training.csv')\n",
+    "\n",
+    "terrain.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f27fa299",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Latitude       -34.405833\n",
+       "Longitude       17.730278\n",
+       "Sample Date    01-01-2013\n",
+       "elevation             5.0\n",
+       "slope                 0.0\n",
+       "curvature          -0.003\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "terrain.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9e8910e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Latitude       -22.225556\n",
+       "Longitude          32.325\n",
+       "Sample Date    31-12-2015\n",
+       "elevation          1594.0\n",
+       "slope                28.0\n",
+       "curvature           0.014\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "terrain.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "021b31c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elevation\n",
+      "148\n",
+      "slope\n",
+      "18\n",
+      "curvature\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "for coluna in terrain.columns:\n",
+    "    if coluna not in ['Latitude', 'Longitude', 'Sample Date']:\n",
+    "        print(coluna)\n",
+    "        print(len(terrain[coluna].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "6868deaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Latitude       -34.405833\n",
+      "Longitude       17.730278\n",
+      "Sample Date    01-01-2013\n",
+      "elevation             0.0\n",
+      "slope                 0.0\n",
+      "curvature          -0.003\n",
+      "dtype: object\n",
+      "\n",
+      "Latitude       -22.225556\n",
+      "Longitude          32.325\n",
+      "Sample Date    31-12-2015\n",
+      "elevation          1540.0\n",
+      "slope                28.0\n",
+      "curvature           0.012\n",
+      "dtype: object\n",
+      "\n",
+      "elevation\n",
+      "15\n",
+      "slope\n",
+      "11\n",
+      "curvature\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "terrain['elevation'] = (terrain['elevation'] // 110) * 110\n",
+    "terrain['slope'] = (terrain['slope'] // 2) * 2\n",
+    "terrain['curvature'] = (terrain['curvature'] // 0.003) * 0.003\n",
+    "\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "print(terrain.min())\n",
+    "print()\n",
+    "print(terrain.max())\n",
+    "print()\n",
+    "\n",
+    "for coluna in terrain.columns:\n",
+    "    if coluna not in ['Latitude', 'Longitude', 'Sample Date']:\n",
+    "        print(coluna)\n",
+    "        print(len(terrain[coluna].unique()))\n",
+    "\n",
+    "\n",
+    "terrain.to_csv('../Datasets/nasa_terrain_features_rounded_in_packs_training.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
